--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 Flask==3.1.1
-flask-cors==6.0.1
+flask-cors==4.0.1
 flask-sqlalchemy==3.1.1
 requests==2.32.3
-
+psycopg2-binary==2.9.7
+python-dotenv==1.0.0
 gunicorn
-
 supabase
-
-psycopg2-binary
